# stm32-serial

./: Cargo.toml  memory.x
.cargo/: config
src/: main.rs  register.rs  serial.rs
