[package]
authors = ["Greg Green <gpgreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32-serial"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
#cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
nb = "0.1.1"
heapless = "0.7.13"
serial_packet_parser = { path = "../serial_packet_parser" }

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# hal for device
nucleo-f103rb = "0.3.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-serial"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
